# handwritten-digit-recognition-cnn

./: README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py  inference.py  model.py
models/: handwritten_digit_recogniser.pth
saved_images/: transform_image.py
